<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.davidkazad.chantlouange.activities.ItemActivity">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/advance_research"
        app:showAsAction="always"
        android:iconTint="@color/white"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/action_find"
        android:orderInCategory="100"
        android:title="@string/advance_research"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="100"
        android:title="@string/table_matieres"
        android:icon="@drawable/sorting"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_helps"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never" />
</menu>
