<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/button_resource"
    android:focusable="true"
    android:padding="3dp"
    android:layout_margin="3dp"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_book"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iUser"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/user_image"
                    android:src="@drawable/user" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textColor="@color/md_blue_500"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/date"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/posted_date"
                    android:textColor="@color/primary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/picture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/under_line"
                    android:maxHeight="160dp"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/maven_pro_regular"
                    android:text="@string/sample"
                    android:textColor="@color/primary"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/like"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="top"
                        android:src="@drawable/likee"
                        android:contentDescription="@string/emoji"/>

                    <ImageView
                        android:id="@+id/comment"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="bottom"
                        android:src="@drawable/comment"
                        android:contentDescription="@string/emoji"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|end"
                    android:orientation="horizontal"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <TextView
                        android:id="@+id/like1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/likes"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/comment1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/comments"
                        android:textColor="@color/black" />

                    <ImageView
                        android:id="@+id/more"
                        android:layout_width="24dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:contentDescription="@string/user_image"
                        android:src="@drawable/more" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>