<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    android:gravity="center"

    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="100dp"
        android:paddingTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            app:civ_circle_background_color="#fff"
            app:civ_border_color= "#fff"
            app:civ_border_width="4dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/splash_title"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="24dp"
            android:padding="10dp"/>

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_title"
            android:textColor="@color/white"
            android:fontFamily="@font/maven_pro_regular"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_subtitle"
            android:textColor="@color/white"
            android:fontFamily="@font/maven_pro_regular"
            android:textSize="18dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/enter"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:background="@drawable/button"
            android:visibility="visible"/>
    </LinearLayout>

    <TextView
        android:onClick="slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="left"
        android:padding="20dp"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/sacramento_regular"
        android:text="@string/slogan2"/>


</FrameLayout>